Finished update manager; testing phase